tests/invalid/generated_binop_floordiv_bytes_bytes/main.py
# Auto-generated invalid binop case.
def main() -> None:
    x: bytes = b"hello"
    y: bytes = b"hello"
    z = x // y
